@@ -38,7 +38,6 @@ import io.greptime.models.Err;
 import io.greptime.models.Result;
 import io.greptime.models.Table;
 import io.greptime.models.WriteOk;
-import io.greptime.v1.Common;
 import io.greptime.v1.RowData;
 import java.lang.reflect.Field;
 import java.util.ArrayList;
@@ -48,7 +47,6 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 import org.apache.hertzbeat.common.constants.CommonConstants;
 import org.apache.hertzbeat.common.entity.arrow.ArrowCell;
 import org.apache.hertzbeat.common.entity.arrow.RowWrapper;
@@ -133,7 +131,6 @@ class GreptimeDbDataStorageTest {
             when(mockResult.isOk()).thenReturn(true);
             CompletableFuture<Result<WriteOk, Err>> mockFuture = CompletableFuture.completedFuture(mockResult);
             when(greptimeDb.write(any(Table.class))).thenReturn(mockFuture);
-
             greptimeDbDataStorage = new GreptimeDbDataStorage(greptimeProperties, restTemplate, greptimeSqlQueryExecutor);
 
             // Test with valid metrics data
@@ -157,15 +154,14 @@ class GreptimeDbDataStorageTest {
     }
 
     @Test
-    void testSaveDataWithCustomLabels() throws Exception {
+    void testSaveDataSkipsCustomLabelCollisionsWithoutDroppingMetrics() throws Exception {
         try (MockedStatic<GreptimeDB> mockedStatic = mockStatic(GreptimeDB.class)) {
             mockedStatic.when(() -> GreptimeDB.create(any())).thenReturn(greptimeDb);
-
+            @SuppressWarnings("unchecked")
             Result<WriteOk, Err> mockResult = mock(Result.class);
             when(mockResult.isOk()).thenReturn(true);
-            CompletableFuture<Result<WriteOk, Err>> mockFuture = CompletableFuture.completedFuture(mockResult);
-            when(greptimeDb.write(any(Table.class))).thenReturn(mockFuture);
-
+            when(greptimeDb.write(any(Table.class)))
+                    .thenReturn(CompletableFuture.completedFuture(mockResult));
             greptimeDbDataStorage = new GreptimeDbDataStorage(greptimeProperties, restTemplate, greptimeSqlQueryExecutor);
 
             CollectRep.MetricsData metricsData = createMockMetricsData(true);
@@ -181,27 +177,39 @@ class GreptimeDbDataStorageTest {
             greptimeDbDataStorage.saveData(metricsData);
 
             verify(greptimeDb).write(tableCaptor.capture());
-            Table capturedTable = tableCaptor.getValue();
-
-            List<RowData.ColumnSchema> columnSchemas = getColumnSchemas(capturedTable);
-            List<String> columnNames = columnSchemas.stream()
+            List<String> columnNames = getColumnSchemas(tableCaptor.getValue()).stream()
                     .map(RowData.ColumnSchema::getColumnName)
-                    .collect(Collectors.toList());
-            assertEquals(5, columnNames.size());
+                    .toList();
+            // The fixture already contains an `instance` metric field in addition to the
+            // storage identity tag; the conflicting custom label must not add a third column.
             assertEquals(2, Collections.frequency(columnNames, "instance"));
             assertEquals(1, Collections.frequency(columnNames, "ts"));
             assertEquals(1, Collections.frequency(columnNames, "usage"));
+            assertEquals(1, Collections.frequency(columnNames, "env"));
+            assertEquals(3, greptimeDbDataStorage.getIgnoredLabelCollisionCount());
+        }
+    }
 
-            List<RowData.ColumnSchema> envColumnSchemas = columnSchemas.stream()
-                    .filter(columnSchema -> "env".equals(columnSchema.getColumnName()))
-                    .collect(Collectors.toList());
-            assertEquals(1, envColumnSchemas.size());
-            assertEquals(Common.SemanticType.TAG, envColumnSchemas.get(0).getSemanticType());
+    @Test
+    void testSaveDataAcceptsNonConflictingCustomLabels() throws Exception {
+        try (MockedStatic<GreptimeDB> mockedStatic = mockStatic(GreptimeDB.class)) {
+            mockedStatic.when(() -> GreptimeDB.create(any())).thenReturn(greptimeDb);
+            @SuppressWarnings("unchecked")
+            Result<WriteOk, Err> mockResult = mock(Result.class);
+            when(mockResult.isOk()).thenReturn(true);
+            when(greptimeDb.write(any(Table.class)))
+                    .thenReturn(CompletableFuture.completedFuture(mockResult));
+            greptimeDbDataStorage = new GreptimeDbDataStorage(
+                    greptimeProperties, restTemplate, greptimeSqlQueryExecutor);
+            CollectRep.MetricsData metricsData = createMockMetricsData(true);
+            when(metricsData.getLabels()).thenReturn(Map.of("env", "prod"));
 
-            List<RowData.Row> rows = getRows(capturedTable);
-            assertEquals(1, rows.size());
-            RowData.Row row = rows.get(0);
-            assertEquals("prod", row.getValuesList().get(4).getStringValue());
+            ArgumentCaptor<Table> tableCaptor = ArgumentCaptor.forClass(Table.class);
+            greptimeDbDataStorage.saveData(metricsData);
+
+            verify(greptimeDb).write(tableCaptor.capture());
+            List<RowData.ColumnSchema> schemas = getColumnSchemas(tableCaptor.getValue());
+            assertTrue(schemas.stream().anyMatch(schema -> "env".equals(schema.getColumnName())));
         }
     }
 
